[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rerate"
version = "0.0.2"
authors = [
  { name="Patrick He", email="patrick.zebing.he@gmail.com" },
]
description = "Flexible, easy to use rate limiter"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/patrickzbhe/rerate"
Issues = "https://github.com/patrickzbhe/rerate/issues"
